@@ -1,0 +1,39 @@
+name: "Run tests (setup)"
+description: "Sets up the PR comment for tests"
+
+inputs:
+  GITHUB_TOKEN:
+    description: "The GitHub token to use for authentication"
+    required: true
+
+runs:
+  using: "composite"
+
+  steps:
+    - name: Get workflow URL
+      id: workflow-url
+      run: |
+        repo_url="${{ github.server_url }}/${{ github.repository }}"
+        echo "url=$repo_url/actions/runs/${{ github.run_id }}" >> $GITHUB_OUTPUT
+      shell: bash
+
+    - name: Begin PR comment
+      uses: marocchino/sticky-pull-request-comment@v2
+      with:
+        GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
+        header: tests
+        recreate: true
+        message: |
+          ## Test results
+          See [workflow run](${{ steps.workflow-url.outputs.url }}) for test output.
+
+    # Neccesary since the first comment has an annoying comment.
+    - name: Append table header
+      uses: marocchino/sticky-pull-request-comment@v2
+      with:
+        GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
+        header: tests
+        append: true
+        message: |
+          | Job name | Unit tests | Integration tests |
+          | --- | --- | --- |
