@@ -205,6 +205,7 @@ MainWindow::~MainWindow() {
 }
 
 void MainWindow::open() {
+
   std::array<QAction *, 7> trayMenu = {
       m_pActionStartSynergy, m_pActionStopSynergy, nullptr,
       m_pActionMinimize,     m_pActionRestore,     nullptr,
